@@ -68,7 +68,10 @@
 (require 'font-lock)
 (when (featurep 'xemacs)
   (require 'overlay)
-  (require 'un-define))
+  (when (or (< emacs-major-version 21)
+            (and (= emacs-major-version 21)
+                 (< emacs-minor-version 5)))
+    (require 'un-define)))
 (require 'easymenu)
 (eval-when (compile)
   (require 'arc-mode)
